initial setup stuff

--- a/settings/live.ini
+++ b/settings/live.ini
@@ -1,9 +1,15 @@
 ; live config file - every other mode inherits from this
 
 [site]
-title="Jaoss Web Template"
-namespace="jaoss_web_tpl"
-timezone="Europe/London"
+base_href="http://tnyr.com/"
+title="TNYR"
+namespace="tnyr_2012"
+; no cache for now...
+cache_enabled=false
+
+[twitter]
+consumer_key="LJ02su8PjzSMrCDaQBaqjg"
+consumer_secret="LYLf2IImkbhwj9M0oIdUsQUIzzy5auPog8HEDQDPKMY"
 
 [uploads]
 files=PROJECT_ROOT"uploads/"
