--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "jaoss"]
 	path = jaoss
 	url = git://github.com/makeusabrew/jaoss.git
+[submodule "apps/twitterusers/deps/twitter-async"]
+	path = apps/twitterusers/deps/twitter-async
+	url = git://github.com/jmathai/twitter-async.git
