--- a/settings/build.ini
+++ b/settings/build.ini
@@ -1,6 +1,11 @@
 ; live.ini -> demo.ini -> build.ini
 ; we only override what we need to in here
 
+[db]
+dbname=tnyr
+user=tnyr
+pass="m6NfGwMRautSZp2c"
+
 [errors]
 ; we want debug level error messages on screen
 verbose=true
