change working title

--- a/settings/live.ini
+++ b/settings/live.ini
@@ -1,8 +1,8 @@
 ; live config file - every other mode inherits from this
 
 [site]
-base_href="http://tnyr.com/"
-title="TNYR"
+base_href="http://tweetgoals.com/"
+title="TweetGoals"
 namespace="tnyr_2012"
 ; no cache for now...
 cache_enabled=false
